# advent-of-code-2024

./: CMakeLists.txt
day01/task01/: a.out  main.cpp
day01/task02/: main  main.cpp
day02/: main  main.c  main.cpp
day03/: main  main.cpp
day03/input/: input.txt
day04/: main.cpp
day05/: main.bak  main.c
day06/: main.c  main_part2.c
utils/: graph.c  hash_map.c  hash_map.h  hash_map_status_codes.h  vector.c  vector.h
